compiler/fir/analysis-tests/testData/extendedCheckers/RedundantCallOfConversionMethod/nullable.kt
// WITH_RUNTIME
// IS_APPLICABLE: false
fun foo(s: String?) {
    <!UNUSED_VARIABLE!>val t: String = s.toString()<!>
}